--- a/estilos/css/animaciones/animaciones.css
+++ b/estilos/css/animaciones/animaciones.css
@@ -8,3 +8,4 @@
 @import url("./animaciones_estrellas.css");
 @import url("./animaciones_3d.css");
 @import url("./efectos__combinados.css");
+@import url("./resplandor.css");
