--- a/estilos/css/componentes/tarjetas/tarjetas.css
+++ b/estilos/css/componentes/tarjetas/tarjetas.css
@@ -232,3 +232,29 @@
 .holograma:active::after {
   animation: zoom 0.5s ease-out;
 }
+
+.tarjeta__icono {
+  background-color: white;
+  border-radius: 1rem;
+  box-shadow: 0 4px 10px rgba(255, 255, 255, 0.8);
+  overflow: hidden;
+  max-width: 300px;
+  margin: 1rem;
+}
+
+.tarjeta__icono__contenido {
+  padding: 1.5rem;
+  position: relative;
+  box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.2);
+}
+
+.tarjeta__icono__titulo {
+  display: flex;
+  align-items: center;
+}
+
+.linea-separacion {
+  height: 2px;
+  background-color: var(--color-texto);
+  margin: 1rem 0;
+}
